added second Control response

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
    <body>
       <p>Radio check. Pilot, please confirm.</p>
       <p> roger that</p>
+      <p>What's your Location?</p>
    </body>
 </html>
